# rust-monorepo-sandbox

./: .gitignore  Cargo.toml  README.md  compose.yml  docker-compose.yml
.github/workflows/: build.yaml  ci.yaml
common/: Cargo.toml
common/src/: lib.rs
docker/: init.sh  service_a.Dockerfile  service_a.dev.Dockerfile  service_a.local.Dockerfile  service_b.Dockerfile  service_b.dev.Dockerfile  service_b.local.Dockerfile
services/service_a/: Cargo.toml
services/service_a/src/: main.rs
services/service_b/: Cargo.toml
services/service_b/src/: main.rs
