[package]
name = "service_a"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
actix-web = "4.9.0"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-sns = "1.57.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
anyhow = "1.0.95"
